--- a/index.html
+++ b/index.html
@@ -49,9 +49,13 @@
           </p>
           <p class="cta__card--price"><span>$4 </span>/ month</p>
           <div class="cta__card--buttons">
-            <button class="cta__card--buttons-ios btn">iOS Download</button>
+            <button class="cta__card--buttons-ios btn">
+              <img src="./assets/icon-apple.svg" alt="Apple-icon" />
+              <p>iOS Download</p>
+            </button>
             <button class="cta__card--buttons-android btn">
-              Android Download
+              <img src="./assets/icon-android.svg" alt="Android-icon" />
+              <p>Android Download</p>
             </button>
           </div>
         </div>
