--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
       <footer class="footer">
         <img src="./assets/logo.svg" alt="Logo" class="footer__logo" />
         <p class="footer__text">
-          All rights reserved © Equalizer 2021 Have any problems? Contact us via
-          social media or email us at <a href="#">equalizer@example.com</a>
+          All rights reserved © Equalizer 2021 </br>Have any problems? Contact us via
+          social media or </br>email us at <a href="#">equalizer@example.com</a>
         </p>
         <div class="footer__links">
           <a href="#"
