--- a/index.html
+++ b/index.html
@@ -67,24 +67,21 @@
           social media or </br>email us at <a href="#">equalizer@example.com</a>
         </p>
         <div class="footer__links">
-          <a href="#"
-            ><img
-              src="./assets/icon-facebook.svg"
-              alt="Facbook-link"
-              class="footer__links--icon"
-          /></a>
-          <a href="#"
-            ><img
-              src="./assets/icon-instagram.svg"
-              alt="Instagram-link"
-              class="footer__links--icon"
-          /></a>
-          <a href="#"
-            ><img
-              src="./assets/icon-twitter.svg"
-              alt="Twitter-link"
-              class="footer__links--icon"
-          /></a>
+          <a href="#">
+            <svg class="user-nav__icon">
+              <use xlink:href="sprite.svg#icon-facebook"></use>
+          </svg>
+          </a>
+          <a href="#">
+            <svg class="user-nav__icon">
+              <use xlink:href="sprite.svg#icon-instagram"></use>
+          </svg>
+          </a>
+          <a href="#">
+            <svg class="user-nav__icon">
+              <use xlink:href="sprite.svg#icon-twitter"></use>
+          </svg>
+          </a>          
         </div>
       </footer>
     </div>
