--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
         <div class="footer__links">
           <a href="#">
             <svg class="user-nav__icon">
-              <use xlink:href="sprite.svg#icon-facebook"></use>
+              <use href="sprite.svg#icon-facebook"></use>
           </svg>
           </a>
           <a href="#">
             <svg class="user-nav__icon">
-              <use xlink:href="sprite.svg#icon-instagram"></use>
+              <use href="sprite.svg#icon-instagram"></use>
           </svg>
           </a>
           <a href="#">
             <svg class="user-nav__icon">
-              <use xlink:href="sprite.svg#icon-twitter"></use>
+              <use href="sprite.svg#icon-twitter"></use>
           </svg>
           </a>          
         </div>
