--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="container">
-      <section class="heading">
+      <header class="heading">
         <img src="./assets/logo.svg" alt="Logo" class="heading__logo" />
         <h1 class="heading__headline">
           We make your music sound extraordinary.
@@ -33,8 +33,8 @@
           parametric EQ & volume mixer. Control bass, mids, treble, gain
           control, reverb, and more!
         </p>
-      </section>
-      <section class="cta">
+      </header>
+      <main class="cta">
         <img
           src="./assets/illustration-app.png"
           alt="illustration-app"
@@ -59,7 +59,7 @@
             </button>
           </div>
         </div>
-      </section>
+      </main>
       <footer class="footer">
         <img src="./assets/logo.svg" alt="Logo" class="footer__logo" />
         <p class="footer__text">
