--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
           social media or </br>email us at <a href="#">equalizer@example.com</a>
         </p>
         <div class="footer__links">
-          <a href="#">
+          <a aria-label="facebook link" href="#">
             <svg class="user-nav__icon">
               <use href="sprite.svg#icon-facebook"></use>
           </svg>
           </a>
-          <a href="#">
+          <a aria-label="instagram link" href="#">
             <svg class="user-nav__icon">
               <use href="sprite.svg#icon-instagram"></use>
           </svg>
           </a>
-          <a href="#">
+          <a aria-label="twitter link" href="#">
             <svg class="user-nav__icon">
               <use href="sprite.svg#icon-twitter"></use>
           </svg>
